fixed width spacing on /tutorials

--- a/apps/base-docs/src/pages/tutorials/styles.module.css
+++ b/apps/base-docs/src/pages/tutorials/styles.module.css
@@ -57,6 +57,7 @@
 }
 
 .tutorialsMarkdown {
+  width: 100%;
   max-width: 841px !important;
   padding-top: 24px;
   padding-bottom: 24px;
